src/test/deca/codegen/valid/unary_minus_modulo.ass
; Main Program
	TSTO #3
	BOV pile_pleine
	ADDSP #3
; start main program
; Main program
; Beginning of main instructions:
	LOAD #3, R3
	OPP R3, R3
	STORE R3, 1(GB)
	LOAD #10, R3
	PUSH R3
	LOAD #3, R3
	POP R2
	CMP #0, R3
	BEQ reste_par_zero
	REM R3, R2
	LOAD R2, R3
	STORE R3, 2(GB)
	LOAD 1(GB), R1
	WINT
	LOAD 2(GB), R1
	WINT
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
reste_par_zero:
	WSTR "Erreur : reste de la division entiere par zero"
	WNL
	ERROR
; end main program
