src/test/deca/codegen/invalid/mod_zero.ass
; Main Program
	TSTO #2
	BOV pile_pleine
	ADDSP #2
; start main program
; Main program
; Beginning of main instructions:
	LOAD #10, R3
	STORE R3, 1(GB)
	LOAD #0, R3
	STORE R3, 2(GB)
	LOAD 1(GB), R1
	LOAD 2(GB), R3
	CMP #0, R3
	BEQ reste_par_zero
	REM R3, R1
	WINT
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
reste_par_zero:
	WSTR "Erreur : reste de la division entiere par zero"
	WNL
	ERROR
; end main program
